tests/tldk/error/close-with-out-of-order-finack.pkt
// close stream and send FIN. Then receive a FinAck whose sequence
// is out of order.

0.000 socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
0.000 setsockopt(3, SOL_SOCKET, SO_REUSEADDR, [1], 4) = 0
0.000 bind(3, ..., ...) = 0
0.000 listen(3, 1) = 0

0.100 < S 0:0(0) win 32792 <mss 1460,sackOK,nop,nop,nop,wscale 7>
0.100 > S. 0:0(0) ack 1 <...>
0.200 < . 1:1(0) ack 1 win 257
0.200 accept(3, ..., ...) = 4

// Receive first segment
0.210 < P. 1:1001(1000) ack 1 win 46

// Send one ACK
0.210 > . 1:1(0) ack 1001

// Application writes 1000 bytes
0.250 write(4, ..., 5000) = 5000
0.250 > . 1:5001(5000) ack 1001

// ACK
0.300 < . 1001:1001(0) ack 1001 win 257

0.400 read(4, ..., 1000) = 1000

+0.1 close(4) = 0
+0 > F. 5001:5001(0) ack 1001
+0.1 < F. 2201:2201(0) ack 5002 win 257
+0 > . 5002:5002(0) ack 1001
+5 < F. 1001:2201(1200) ack 5002 win 257
+0 > . 5002:5002(0) ack 2202

